# docs/swagger.json
@@ -17,7 +17,7 @@
             "name": "GPL v3",
             "url": "https://www.gnu.de/documents/gpl.en.html"
         },
-        "version": "1.0.6"
+        "version": "1.1.0"
     },
     "host": "chaika-soft.ru",
     "basePath": "/",
@@ -39,13 +39,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.GetAllProductsResponse"
+                            "$ref": "#/definitions/schemas.GetAllProductsResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.ErrorResponse"
+                            "$ref": "#/definitions/schemas.ErrorResponse"
                         }
                     }
                 }
@@ -69,7 +69,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.UpdateProductRequest"
+                            "$ref": "#/definitions/schemas.UpdateProductRequest"
                         }
                     }
                 ],
@@ -77,19 +77,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.UpdateProductResponse"
+                            "$ref": "#/definitions/schemas.UpdateProductResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.ErrorResponse"
+                            "$ref": "#/definitions/schemas.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.ErrorResponse"
+                            "$ref": "#/definitions/schemas.ErrorResponse"
                         }
                     }
                 }
@@ -113,7 +113,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.CreateProductRequest"
+                            "$ref": "#/definitions/schemas.CreateProductRequest"
                         }
                     }
                 ],
@@ -121,19 +121,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.CreateProductResponse"
+                            "$ref": "#/definitions/schemas.CreateProductResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.ErrorResponse"
+                            "$ref": "#/definitions/schemas.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.ErrorResponse"
+                            "$ref": "#/definitions/schemas.ErrorResponse"
                         }
                     }
                 }
@@ -159,7 +159,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.AddTemplateRequest"
+                            "$ref": "#/definitions/schemas.AddTemplateRequest"
                         }
                     }
                 ],
@@ -167,19 +167,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.AddTemplateResponse"
+                            "$ref": "#/definitions/schemas.AddTemplateResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.ErrorResponse"
+                            "$ref": "#/definitions/schemas.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.ErrorResponse"
+                            "$ref": "#/definitions/schemas.ErrorResponse"
                         }
                     }
                 }
@@ -224,13 +224,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.SearchTemplatesResponse"
+                            "$ref": "#/definitions/schemas.SearchTemplatesResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.ErrorResponse"
+                            "$ref": "#/definitions/schemas.ErrorResponse"
                         }
                     }
                 }
@@ -262,19 +262,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.GetTemplateByIDResponse"
+                            "$ref": "#/definitions/schemas.GetTemplateByIDResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.ErrorResponse"
+                            "$ref": "#/definitions/schemas.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.ErrorResponse"
+                            "$ref": "#/definitions/schemas.ErrorResponse"
                         }
                     }
                 }
@@ -306,19 +306,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.GetProductByIDResponse"
+                            "$ref": "#/definitions/schemas.GetProductByIDResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.ErrorResponse"
+                            "$ref": "#/definitions/schemas.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.ErrorResponse"
+                            "$ref": "#/definitions/schemas.ErrorResponse"
                         }
                     }
                 }
@@ -348,19 +348,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.DeleteProductResponse"
+                            "$ref": "#/definitions/schemas.DeleteProductResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.ErrorResponse"
+                            "$ref": "#/definitions/schemas.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.ErrorResponse"
+                            "$ref": "#/definitions/schemas.ErrorResponse"
                         }
                     }
                 }
@@ -368,21 +368,21 @@
         }
     },
     "definitions": {
-        "github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.AddTemplateRequest": {
+        "schemas.AddTemplateRequest": {
             "description": "Запрос на добавление шаблона",
             "type": "object",
             "properties": {
-                "Template": {
+                "template": {
                     "description": "Сведения о новом шаблоне",
                     "allOf": [
                         {
-                            "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.TemplateSchema"
+                            "$ref": "#/definitions/schemas.TemplateSchema"
                         }
                     ]
                 }
             }
         },
-        "github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.AddTemplateResponse": {
+        "schemas.AddTemplateResponse": {
             "description": "Ответ на запрос на добавление шаблона",
             "type": "object",
             "properties": {
@@ -392,16 +392,16 @@
                 }
             }
         },
-        "github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.CreateProductRequest": {
+        "schemas.CreateProductRequest": {
             "description": "Запрос на добавление продукта",
             "type": "object",
             "properties": {
                 "product": {
-                    "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.ProductSchema"
+                    "$ref": "#/definitions/schemas.ProductSchema"
                 }
             }
         },
-        "github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.CreateProductResponse": {
+        "schemas.CreateProductResponse": {
             "description": "Ответ на запрос на добавление продукта",
             "type": "object",
             "properties": {
@@ -410,11 +410,11 @@
                 }
             }
         },
-        "github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.DeleteProductResponse": {
+        "schemas.DeleteProductResponse": {
             "description": "Ответ на запрос на удаление продукта",
             "type": "object"
         },
-        "github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.ErrorResponse": {
+        "schemas.ErrorResponse": {
             "type": "object",
             "properties": {
                 "code": {
@@ -427,37 +427,37 @@
                 }
             }
         },
-        "github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.GetAllProductsResponse": {
+        "schemas.GetAllProductsResponse": {
             "description": "Ответ на запрос на получение всех продуктов",
             "type": "object",
             "properties": {
                 "products": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.ProductSchema"
+                        "$ref": "#/definitions/schemas.ProductSchema"
                     }
                 }
             }
         },
-        "github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.GetProductByIDResponse": {
+        "schemas.GetProductByIDResponse": {
             "description": "Ответ на запрос на получение продукта по его ID",
             "type": "object",
             "properties": {
                 "product": {
-                    "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.ProductSchema"
+                    "$ref": "#/definitions/schemas.ProductSchema"
                 }
             }
         },
-        "github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.GetTemplateByIDResponse": {
+        "schemas.GetTemplateByIDResponse": {
             "description": "Ответ на запрос на получение шаблона по его ID",
             "type": "object",
             "properties": {
-                "Template": {
-                    "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.TemplateSchema"
+                "template": {
+                    "$ref": "#/definitions/schemas.TemplateSchema"
                 }
             }
         },
-        "github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.ProductSchema": {
+        "schemas.ProductSchema": {
             "type": "object",
             "properties": {
                 "description": {
@@ -477,19 +477,19 @@
                 }
             }
         },
-        "github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.SearchTemplatesResponse": {
+        "schemas.SearchTemplatesResponse": {
             "description": "Ответ на запрос на поиск шаблонов",
             "type": "object",
             "properties": {
-                "Templates": {
+                "templates": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.TemplateSchema"
+                        "$ref": "#/definitions/schemas.TemplateSchema"
                     }
                 }
             }
         },
-        "github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.TemplateContentSchema": {
+        "schemas.TemplateContentSchema": {
             "type": "object",
             "properties": {
                 "product_id": {
@@ -500,13 +500,13 @@
                 }
             }
         },
-        "github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.TemplateSchema": {
+        "schemas.TemplateSchema": {
             "type": "object",
             "properties": {
                 "content": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.TemplateContentSchema"
+                        "$ref": "#/definitions/schemas.TemplateContentSchema"
                     }
                 },
                 "description": {
@@ -520,16 +520,16 @@
                 }
             }
         },
-        "github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.UpdateProductRequest": {
+        "schemas.UpdateProductRequest": {
             "description": "Запрос на обновление продукта",
             "type": "object",
             "properties": {
                 "product": {
-                    "$ref": "#/definitions/github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.ProductSchema"
+                    "$ref": "#/definitions/schemas.ProductSchema"
                 }
             }
         },
-        "github_com_Chaika-Team_ChaikaGoods_internal_handler_schemas.UpdateProductResponse": {
+        "schemas.UpdateProductResponse": {
             "description": "Ответ на запрос на обновление продукта",
             "type": "object"
         }
